--- a/.github/workflows/Build deployAVDSessionHostReplacer bicep file into ARM.yml
+++ b/.github/workflows/Build deployAVDSessionHostReplacer bicep file into ARM.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v4.1.2
 
       - name: Build Bicep File
+        shell: pwsh
         run: |
           bicep build ./deploy/bicep/DeployAVDSessionHostReplacer.bicep --outfile ./deploy/arm/DeployAVDSessionHostReplacer.json
 
