--- a/.github/workflows/CreateRelease.yml
+++ b/.github/workflows/CreateRelease.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   Build-Nightly-Zip:
     runs-on: ubuntu-latest
-    if: github.sha == github.event.head_commit.id # Only run the job if the commit is the latest one
+    #if: github.sha == github.event.head_commit.id # Only run the job if the commit is the latest one
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.2
