--- a/.github/workflows/CreateRelease.yml
+++ b/.github/workflows/CreateRelease.yml
@@ -34,6 +34,12 @@ jobs:
           PRE_RELEASE: true    # Enable pre-release
           VERBOSE: true
 
+      - name: Run-Build-Script
+        id: ReleaseBody
+        shell: pwsh
+        run: |
+          ./Build/Build-Release-Body.ps1 -Tag "${{ steps.bump_version.outputs.new_tag }}"
+
       - name: Create Release
         # You may pin to the exact commit or the version.
         # uses: ncipollo/release-action@2c591bcc8ecdcd2db72b97d6147f871fcd833ba5
@@ -54,4 +60,4 @@ jobs:
           tag: ${{ steps.bump_version.outputs.new_tag }} # optional, default is
           # The Github token.
           token: ${{ secrets.GITHUB_TOKEN }} # optional, default is ${{ github.token }}
-          body: ${{ github.ref }}
+          body: ${{ steps.ReleaseBody.outputs.ReleaseBody }}
