--- a/.github/workflows/CreateRelease.yml
+++ b/.github/workflows/CreateRelease.yml
@@ -59,7 +59,7 @@ jobs:
         id: ReleaseBody
         shell: pwsh
         run: |
-          ./Build/Build-Release-Body.ps1 -Tag "${{ steps.bump_version.outputs.new_tag }}" -GitRef "${{ github.head_ref }}"
+          ./Build/Build-Release-Body.ps1 -Tag "${{ steps.bump_version.outputs.new_tag }}" -GitRef "${{ github.ref_name }}"
 
       - name: Create Release
         # You may pin to the exact commit or the version.
