Update workflow triggers

--- a/.github/workflows/CreateRelease.yml
+++ b/.github/workflows/CreateRelease.yml
@@ -3,6 +3,7 @@ on:
     paths:
       - 'FunctionApp/**'
       - 'deploy/**'
+      - 'StandardSessionHostTemplate/**'
   workflow_dispatch:
     inputs:
       messages:
