--- a/.github/workflows/Deploy-To-Test.yml
+++ b/.github/workflows/Deploy-To-Test.yml
@@ -30,6 +30,6 @@ jobs:
     - name: Run Azure PowerShell Script File
       uses: azure/powershell@v2
       with:
-        inlineScript: ./.github/workflows/scripts/Deploy-To-Test.ps1 -DomJoinUserName '${{ secrets.AD_JOIN_USER }}' -DomJoinUserPassword '${{ secrets.AD_JOIN_PASS }}' -OUName '${{ secrets.AD_OU_TEST }}' -SubnetId '${{ secrets.AZURE_SUBNET_ID }}' -LogAnalyticsWorkspaceId '${{ secrets.AZURE_LOGANALYTICS_WORKSPACE_ID }}' -IdentityDomainName '${{ secrets.AD_NAME}}''
+        inlineScript: ./.github/workflows/scripts/Deploy-To-Test.ps1 -DomJoinUserName '${{ secrets.AD_JOIN_USER }}' -DomJoinUserPassword '${{ secrets.AD_JOIN_PASS }}' -OUName '${{ secrets.AD_OU_TEST }}' -SubnetId '${{ secrets.AZURE_SUBNET_ID }}' -LogAnalyticsWorkspaceId '${{ secrets.AZURE_LOGANALYTICS_WORKSPACE_ID }}' -IdentityDomainName '${{ secrets.AD_NAME}}' -ResourceGroupName '${{ secrets.HOST_POOL_NAME_RG }}' -SessionHostResourceGroupName '${{ secrets.SESSION_HOST_RG }}' -HostPoolName '${{ secrets.HOST_POOL_NAME }}' -LocalAdminUserName '${{ secrets.LOCAL_ADMIN_USER }}'
         azPSVersion: "latest"
         errorActionPreference: continue
